--- a/src/components/styles/header.css
+++ b/src/components/styles/header.css
@@ -2,7 +2,7 @@
 header {
   height: 100%;
   padding-top: 70px;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.25)), url('../assets/header-full.png') no-repeat center center fixed;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.25)), url('../assets/bg.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -33,21 +33,3 @@ header {
   text-decoration: underline;
 }
 
-@media screen and (max-width: 420px) {
-  header {
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.25)), url('../assets/header-vertical.png') center center;
-    -webkit-background-size: auto;
-    -moz-background-size: auto;
-    -o-background-size: auto;
-    background-size: auto;
-  }
-}
-@media screen and (orientation: landscape) and (max-height: 414px) {
-  header {
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.25)), url('../assets/header-horizontal.png') center center;
-    -webkit-background-size: auto;
-    -moz-background-size: auto;
-    -o-background-size: auto;
-    background-size: auto;
-  }
-}
