--- a/src/components/styles/about.css
+++ b/src/components/styles/about.css
@@ -4,7 +4,7 @@
   padding-top: 60px;
   padding-bottom: 60px;
   color: white;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.5)), url('../assets/about-full.png') no-repeat center center fixed;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.5)), url('../assets/bg2.png') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -36,13 +36,3 @@
   font-size: 16px;
 }
 
-@media screen and (max-width: 420px) {
-  .about {
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.25)), url('../assets/about-vertical.png') center center;
-  }
-}
-@media screen and (orientation: landscape) and (max-height: 414px) {
-  .about {
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.25)), url('../assets/about-horizontal.png') center center;
-  }
-}
