--- a/src/components/styles/about.css
+++ b/src/components/styles/about.css
@@ -15,7 +15,9 @@
 .about p {
   line-height: 30px;
   font-size: 20px;
-}
+  width:50%;
+  transform:translate(55%);
+ }
 .about .profile-pic {
   display: block;
   margin-top: 0;
@@ -35,4 +37,9 @@
   padding-left: 40px;
   font-size: 16px;
 }
-
+@media only screen and (max-width: 639px) {
+.about p {
+  width:100%;
+  transform:translate(0);
+ } 
+} 
