--- a/src/components/styles/nav.css
+++ b/src/components/styles/nav.css
@@ -2,7 +2,7 @@
 nav {
   position: fixed;
   width: 100%;
-  height: 35px;
+  padding:15px 0;
   line-height: 25px;
   text-align: right;
   color: white;
@@ -10,6 +10,7 @@ nav {
   border-bottom: 1px solid gray;
   z-index: 1;
 }
+.under{text-decoration:none;}
 .nav-container {
   margin: 0 auto;
   max-width: 1200px;
@@ -66,7 +67,7 @@ nav #toggle {
   nav #toggle:checked + .menu {
     display: block;
     position: absolute;
-    margin-top: 70px;
+    margin-top: 41px;
   }
   @media only screen and (max-width: 299px) {
     nav h1 {
